# deflect

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: array.rs  async.rs  box.rs  boxed_dyn.rs  boxed_slice.rs  clike.rs  dyn.rs  example.rs  function.rs  optionlike.rs  raw.rs  slice.rs  str.rs  struct.rs
src/: debug.rs  err.rs  error.rs  lib.rs
src/schema/: array.rs  array_impl.rs  atom.rs  box.rs  boxed_dyn.rs  boxed_slice.rs  data.rs  discriminant.rs  enum.rs  enum_impl.rs  field.rs  fields.rs  function.rs  mod.rs  name.rs  offset.rs  pointer.rs  ref.rs  slice.rs  slice_impl.rs  str_impl.rs  struct.rs  struct_impl.rs  variant.rs  variants.rs
src/type/: discriminant.rs  enum.rs  mod.rs  struct.rs  variant.rs
src/value/: array.rs  atom.rs  box.rs  boxed_dyn.rs  boxed_slice.rs  enum.rs  field.rs  fields.rs  function.rs  iter.rs  mod.rs  pointer.rs  ref.rs  slice.rs  slice_impl.rs  str_impl.rs  struct.rs  variant.rs
tests/: reflect.rs
