[package]
name = "deflect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.18.0"
anyhow = "1.0.66"
backtrace = "0.3.66"
memmap2 = "0.5.7"
object = "0.29.0"
once_cell = "1.16.0"
rustc-demangle = "0.1.21"
thiserror = "1.0.37"
itertools = "0.10.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[dev-dependencies]
colored-diff = "0.2.3"