[package]
name = "deflect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.17.0"
anyhow = "1.0"
backtrace = "0.3.66"
dashmap = "5.4.0"
memmap2 = "0.5.7"
once_cell = "1.16.0"
procmaps = "0.4.1"
rustc-demangle = "0.1.21"
thiserror = "1.0.37"
itertools = "0.10.5"

[dev-dependencies]
colored-diff = "0.2.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
