[package]
name = "deflect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jswrenn/deflect"
documentation = "https://docs.rs/deflect/"
description = "Reflection in Rust via DWARF debug info."
readme = "README.md"
rust-version = "1.66.0"

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "chore: Release version {{version}}"
allow-branch = ["main"]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/jswrenn/deflect/compare/{{tag_name}}...HEAD", exactly=1},
]
tag-name = "v{{version}}"

[dependencies]
addr2line = "0.17.0"
anyhow = "1.0"
dashmap = "5.4.0"
memmap2 = "0.5.7"
once_cell = "1.16.0"
procmaps = "0.4.1"
rustc-demangle = "0.1.21"
thiserror = "1.0.37"
itertools = "0.10.5"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
